[workspace]
members = ["gru-vulkan-derive"]

[package]
name = "gru-vulkan"
version = "0.1.0"
authors = ["Jannik Fehre"]
license = "MIT OR Apache-2.0"
edition = "2021"

[features]
linked = ["ash/linked"]
loaded = ["ash/loaded"]
math = ["gru-misc/math"]

[dependencies]
gru-vulkan-derive = { path = "gru-vulkan-derive" }
ash = { version = "0.37.3", default-features = false }
ash-window = "0.12.0"
raw-window-handle = "0.5.2" #newer version not used by ash-window
inline-spirv = { version = "0.1.6", default-features = false, features = ["glsl"] }
gpu-allocator = { version = "0.22.0", default-features = false, features = ["vulkan"] }
gru-misc = { path = "../gru-misc", optional = true }
serde = { version = "1.0.164", default-features = false, features = ["derive"], optional = true }
