[workspace]
members = ["gru-vulkan-derive"]

[package]
name = "gru-vulkan"
version = "0.1.0"
authors = ["Jannik Fehre"]
license = "MIT"
edition = "2021"

[features]
linked = ["ash/linked"]
loaded = ["ash/loaded"]
multiview = []
math = ["gru-misc/math"]

[dependencies]
gru-vulkan-derive = { path = "gru-vulkan-derive" }
ash = { version = "0.38.0", default-features = false, features = ["debug", "std"] }
ash-window = "0.13.0"
raw-window-handle = "0.6.2"
inline-spirv = { version = "0.2.1", default-features = false, features = ["glsl"] }
gpu-allocator = { version = "0.27.0", default-features = false, features = ["vulkan"] }
log = { version = "0.4.22", optional = true }
gru-misc = { path = "../gru-misc", optional = true }
serde = { version = "1.0.216", default-features = false, features = ["derive"], optional = true }
